[gd_scene load_steps=29 format=3 uid="uid://pb04c3xlvbrp"]

[ext_resource type="Script" path="res://Characters/Enemies/Boar/boar.gd" id="1_da7mo"]
[ext_resource type="Texture2D" uid="uid://3ppnw72uebf0" path="res://art/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Hit-Vanish/Hit-Sheet-Black.png" id="1_r1b03"]
[ext_resource type="Theme" uid="uid://b7enh4iqn5cqk" path="res://Characters/Enemies/Boar/EnemyHealthBarDesign.tres" id="2_1g04n"]
[ext_resource type="Texture2D" uid="uid://o8c8wqd3ychp" path="res://art/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Idle/Idle-Sheet-export-Back.png" id="2_c32db"]
[ext_resource type="Texture2D" uid="uid://blx7d7puqofx7" path="res://art/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Run/Run-Sheet-Black.png" id="2_kjptr"]
[ext_resource type="Texture2D" uid="uid://6hu81drkb4uj" path="res://art/MenuArt/progress.png" id="2_pb6we"]
[ext_resource type="Script" path="res://Characters/Enemies/Boar/Damageable.gd" id="3_2ber6"]
[ext_resource type="Script" path="res://Characters/CharacterStateMachine.gd" id="3_56uue"]
[ext_resource type="Texture2D" uid="uid://d0fukwxmg05i2" path="res://art/MenuArt/over.png" id="3_pprhh"]
[ext_resource type="Script" path="res://Characters/state.gd" id="4_pdjgm"]
[ext_resource type="Script" path="res://Characters/Enemies/Boar/ItemSpawnerManager.gd" id="6_6oibn"]
[ext_resource type="Script" path="res://Characters/Enemies/Boar/Hitstateboar.gd" id="7_1dq12"]
[ext_resource type="Script" path="res://Characters/Enemies/Boar/RunBoar.gd" id="8_13llv"]
[ext_resource type="Script" path="res://Characters/Enemies/Boar/DeadState.gd" id="8_23r15"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pgcbs"]
size = Vector2(37, 26)

[sub_resource type="Animation" id="Animation_4ux06"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mfqsl"]
resource_name = "dead"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_r1b03")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_p4f7y"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_c32db")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_485xc"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_kjptr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y5nxb"]
_data = {
"RESET": SubResource("Animation_4ux06"),
"dead": SubResource("Animation_mfqsl"),
"idle": SubResource("Animation_p4f7y"),
"run": SubResource("Animation_485xc")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_20gw0"]
animation = &"dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_joqti"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_au0a0"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kt38i"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ukxnv"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mma2m"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xp4r8"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_02p0v"]
states/Start/position = Vector2(199, 132)
states/dead/node = SubResource("AnimationNodeAnimation_20gw0")
states/dead/position = Vector2(656, 132)
states/idle/node = SubResource("AnimationNodeAnimation_joqti")
states/idle/position = Vector2(341, 132)
states/run/node = SubResource("AnimationNodeAnimation_au0a0")
states/run/position = Vector2(486, 27)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_kt38i"), "idle", "dead", SubResource("AnimationNodeStateMachineTransition_ukxnv"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_mma2m"), "run", "dead", SubResource("AnimationNodeStateMachineTransition_xp4r8")]

[node name="Boar" type="CharacterBody2D" node_paths=PackedStringArray("hit_state")]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_da7mo")
hit_state = NodePath("CharacterStateMachine/Hit")

[node name="THealthbarBar" type="TextureProgressBar" parent="."]
offset_left = -22.0
offset_top = -23.0
offset_right = 21.0
offset_bottom = -17.0
theme = ExtResource("2_1g04n")
theme_type_variation = &"EnemyHealthar"
max_value = 40.0
value = 20.0
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
texture_under = ExtResource("2_pb6we")
texture_over = ExtResource("3_pprhh")
texture_progress = ExtResource("2_pb6we")
tint_under = Color(0, 0.203922, 0.203922, 1)
tint_over = Color(0.0509804, 0.0196078, 0, 1)
tint_progress = Color(0.764706, 0.0627451, 0, 1)

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
modulate = Color(0, 0.431373, 0, 1)
offset_left = -21.0
offset_top = -20.0
offset_right = 184.0
offset_bottom = 7.0
scale = Vector2(0.2, 0.2)
max_value = 40.0
show_percentage = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 3
position = Vector2(-1.5, 3)
shape = SubResource("RectangleShape2D_pgcbs")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_kjptr")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y5nxb")
}

[node name="Damageable" type="Node" parent="."]
script = ExtResource("3_2ber6")

[node name="Timer" type="Timer" parent="Damageable"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="ItemSpawner" type="Node" parent="."]
script = ExtResource("6_6oibn")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_02p0v")
anim_player = NodePath("../AnimationPlayer")

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "animation_tree", "current_state")]
script = ExtResource("3_56uue")
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")
current_state = NodePath("Idle")

[node name="Idle" type="Node" parent="CharacterStateMachine"]
script = ExtResource("4_pdjgm")

[node name="Dead" type="Node" parent="CharacterStateMachine"]
script = ExtResource("8_23r15")

[node name="Run" type="Node" parent="CharacterStateMachine"]
script = ExtResource("8_13llv")

[node name="Hit" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("damageable", "dead_state", "return_state")]
script = ExtResource("7_1dq12")
damageable = NodePath("../../Damageable")
dead_state = NodePath("../Dead")
return_state = NodePath("../Idle")
can_move = false

[node name="Timer" type="Timer" parent="CharacterStateMachine/Hit"]
wait_time = 0.25
one_shot = true

[connection signal="animation_finished" from="AnimationTree" to="Damageable" method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="CharacterStateMachine/Hit/Timer" to="CharacterStateMachine/Hit" method="_on_timer_timeout"]
